<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider"
        android:dividerPadding="5dp"
        android:orientation="vertical"
        android:showDividers="middle|end"
        android:weightSum="1"
        tools:context="com.example.priyam.databaselogin.GetBasicInfo">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingRight="10dp"
                android:text="  Name:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="8dp"

                android:background="@null"
                android:gravity="right"
                android:hint="Your Name "
                android:inputType="text|textCapWords"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="5dp"
                android:paddingRight="10dp"
                android:text="Phone No:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="8dp"

                android:background="@null"
                android:gravity="right"
                android:hint="XXXXX-XXXXX"
                android:inputType="phone"
                android:textSize="17sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:paddingRight="10dp"
            android:text="Age:"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:gravity="right"
            android:hint="Your Age"
            android:inputType="number"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:paddingRight="10dp"
            android:text="Gender:"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/malecolor"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:paddingRight="10dp"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:button="@drawable/femaleblack"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radio_female" />

            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingRight="5dp"
            android:text="Height:"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="81dp"
            android:background="@null"
            android:gravity="right|end"
            android:hint="Your Height"
            android:inputType="number"
            android:paddingLeft="0dp"
            android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:gravity="right|end"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/heightSpin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="right"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:drawSelectorOnTop="true"
                        android:entries="@array/spinnerItemsH"
                        android:prompt="@string/prompt"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:paddingRight="5dp"
            android:text="Weight:"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"

            android:layout_marginRight="0dp"
            android:background="@null"
            android:gravity="right"
            android:hint="Your Weight"
            android:inputType="number"
            android:paddingLeft="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="right|end"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/weightSpin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:drawSelectorOnTop="true"
                android:entries="@array/spinnerItemsW"
                android:prompt="@string/prompt"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="5dp"
                android:paddingRight="10dp"
                android:text="City:"
                android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:gravity="right"
            android:hint="Your City"
            android:inputType="text|textCapWords"
            android:textSize="17sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"
            android:paddingRight="10dp"
            android:text="Daily Activity:"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/dailyActivitySpin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginLeft="120dp"
            android:layout_weight="1"
            android:drawSelectorOnTop="true"
            android:entries="@array/dailyActivity"
            android:gravity="right"
            android:prompt="@string/dailyActivity_prompt"
            android:spinnerMode="dropdown" />
        </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <android.support.v7.widget.Toolbar
            android:id="@+id/actionbarT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/teal"
            android:elevation="8dp"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/Base.Theme.AppCompat.CompactMenu">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/toolbarmenucontainer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginRight="30dp"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:onClick="back"
                        android:text="@string/back"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:progressBackgroundTint="@color/darkgrey"
                    android:max="100"
                    android:progress="20"
                    android:progressTint="@android:color/background_light" />

                <LinearLayout
                    android:id="@+id/toolbarmenucontainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="12dp"
                        android:onClick="next"
                        android:text="NEXT"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </RelativeLayout>
</LinearLayout>